feat: add SDK version selector and Codex CLI Login provider
- Add dependency version picker with remote/fallback version lists,
  version comparison, and rollback warnings
- Add Codex CLI Login virtual provider that reads ~/.codex/config.toml
  and auth.json with explicit user authorization
- Gate Codex MCP server access behind local config authorization
- Add i18n translations for all locales (en/zh/es/fr/hi/ja/ko/ru/zh-TW)
- Add unit tests for versioning, provider management, and settings