@@ -1,5 +1,6 @@
 package com.github.claudecodegui.skill;
 
+import com.github.claudecodegui.settings.CodemossSettingsService;
 import com.github.claudecodegui.settings.CodexSettingsManager;
 import com.github.claudecodegui.util.PlatformUtils;
 import com.google.gson.Gson;
@@ -158,15 +159,17 @@ public class CodexSkillService {
         }
 
         // ~/.codex/skills/ (Codex CLI installed skills)
-        String codexDir = Paths.get(userHome, ".codex", "skills").toString();
-        if (Files.isDirectory(Path.of(codexDir)) && seen.add(normalizePath(codexDir))) {
-            dirs.add(new SkillScanDir(codexDir, "user"));
-        }
+        if (isCodexLocalConfigAuthorized()) {
+            String codexDir = Paths.get(userHome, ".codex", "skills").toString();
+            if (Files.isDirectory(Path.of(codexDir)) && seen.add(normalizePath(codexDir))) {
+                dirs.add(new SkillScanDir(codexDir, "user"));
+            }
 
-        // ~/.codex/skills/.system/ (Codex system-level skills)
-        String systemDir = Paths.get(userHome, ".codex", "skills", ".system").toString();
-        if (Files.isDirectory(Path.of(systemDir)) && seen.add(normalizePath(systemDir))) {
-            dirs.add(new SkillScanDir(systemDir, "user"));
+            // ~/.codex/skills/.system/ (Codex system-level skills)
+            String systemDir = Paths.get(userHome, ".codex", "skills", ".system").toString();
+            if (Files.isDirectory(Path.of(systemDir)) && seen.add(normalizePath(systemDir))) {
+                dirs.add(new SkillScanDir(systemDir, "user"));
+            }
         }
 
         return dirs;
@@ -250,6 +253,9 @@ public class CodexSkillService {
     @SuppressWarnings("unchecked")
     public static Set<String> getDisabledSkillPaths() {
         Set<String> disabled = new HashSet<>();
+        if (!isCodexLocalConfigAuthorized()) {
+            return disabled;
+        }
         try {
             Map<String, Object> config;
             synchronized (CONFIG_TOML_LOCK) {
@@ -349,6 +355,12 @@ public class CodexSkillService {
     @SuppressWarnings("unchecked")
     public static JsonObject toggleSkill(String skillPath, boolean currentEnabled, String cwd) {
         JsonObject result = new JsonObject();
+
+        if (!isCodexLocalConfigAuthorized()) {
+            result.addProperty("success", false);
+            result.addProperty("error", com.github.claudecodegui.i18n.ClaudeCodeGuiBundle.message("error.codexLocalAccessNotAuthorized"));
+            return result;
+        }
 
         if (skillPath == null || skillPath.isEmpty()) {
             result.addProperty("success", false);
@@ -642,6 +654,9 @@ public class CodexSkillService {
      */
     @SuppressWarnings("unchecked")
     private static void cleanupConfigTomlEntry(String skillPath) {
+        if (!isCodexLocalConfigAuthorized()) {
+            return;
+        }
         try {
             // Normalize for consistent cross-platform comparison
             String normalizedSkillPath = normalizePath(skillPath);
@@ -712,6 +727,15 @@ public class CodexSkillService {
                 return FileVisitResult.CONTINUE;
             }
         });
+    }
+
+    private static boolean isCodexLocalConfigAuthorized() {
+        try {
+            return new CodemossSettingsService().isCodexLocalConfigAuthorized();
+        } catch (Exception e) {
+            LOG.warn("[CodexSkills] Failed to read Codex local authorization state: " + e.getMessage());
+            return false;
+        }
     }
 
     private static void deleteDirectory(Path dir) throws IOException {
